// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersList does not render read and write badges when user is not owner 1`] = `
<div>
  <div
    class="m-0 row"
  >
    <h2
      class="text-capitalize pe-0 w-auto"
    >
      accepted
    </h2>
    <button
      class="float-end text-secondary ps-0 w-auto border-0 bg-transparent align-self-start"
      data-test-id="accepted-popover"
      style="cursor: pointer; line-height: 1;"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="14"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm169.8-90.7c7.9-22.3 29.1-37.3 52.8-37.3h58.3c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24V250.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1H222.6c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
        />
      </svg>
    </button>
  </div>
  <div
    class="mb-4 list-group"
  >
    <div
      data-test-id="accepted-user-id2"
    >
      <div
        class="list-group-item"
      >
        bar@example.com
      </div>
    </div>
    <div
      data-test-id="accepted-user-id3"
    >
      <div
        class="list-group-item"
      >
        baz@example.com
      </div>
    </div>
  </div>
</div>
`;

exports[`UsersList renders read and write badges when user is owner 1`] = `
<div>
  <div
    class="m-0 row"
  >
    <h2
      class="text-capitalize pe-0 w-auto"
    >
      accepted
    </h2>
    <button
      class="float-end text-secondary ps-0 w-auto border-0 bg-transparent align-self-start"
      data-test-id="accepted-popover"
      style="cursor: pointer; line-height: 1;"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        height="14"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M464 256A208 208 0 1 0 48 256a208 208 0 1 0 416 0zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256zm169.8-90.7c7.9-22.3 29.1-37.3 52.8-37.3h58.3c34.9 0 63.1 28.3 63.1 63.1c0 22.6-12.1 43.5-31.7 54.8L280 264.4c-.2 13-10.9 23.6-24 23.6c-13.3 0-24-10.7-24-24V250.5c0-8.6 4.6-16.5 12.1-20.8l44.3-25.4c4.7-2.7 7.6-7.7 7.6-13.1c0-8.4-6.8-15.1-15.1-15.1H222.6c-3.4 0-6.4 2.1-7.5 5.3l-.4 1.2c-4.4 12.5-18.2 19-30.6 14.6s-19-18.2-14.6-30.6l.4-1.2zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
        />
      </svg>
    </button>
  </div>
  <div
    class="mb-4 list-group"
  >
    <div
      class="users-list-list-group-item list-group-item"
      data-test-id="accepted-user-id2"
    >
      <div
        class="row"
      >
        <div
          class="pt-1 col-md-6"
        >
          bar@example.com
        </div>
        <div
          class="pt-1 col-md-4"
        >
          <span
            class="badge bg-success"
            data-test-id="perm-write"
          >
            write
          </span>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-4 text-warning btn btn-link"
              data-test-id="toggle-permissions"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="32"
                role="img"
                style="display: inline-block; vertical-align: middle;"
                viewBox="0 0 512 512"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M270.6 454.6c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L248 386.7 385.4 249.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-160 160zm160-352l-160 160c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L248 194.7 385.4 57.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3z"
                />
              </svg>
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="remove-share"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="text-danger"
                data-test-id="trash-icon"
                fill="currentColor"
                focusable="false"
                height="32"
                role="img"
                style="display: inline-block; vertical-align: middle;"
                viewBox="0 0 512 512"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="users-list-list-group-item list-group-item"
      data-test-id="accepted-user-id3"
    >
      <div
        class="row"
      >
        <div
          class="pt-1 col-md-6"
        >
          baz@example.com
        </div>
        <div
          class="pt-1 col-md-4"
        >
          <span
            class="badge bg-primary"
            data-test-id="perm-read"
          >
            read
          </span>
        </div>
        <div
          class="col-md-2"
        >
          <div
            class="float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-4 text-warning btn btn-link"
              data-test-id="toggle-permissions"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="32"
                role="img"
                style="display: inline-block; vertical-align: middle;"
                viewBox="0 0 512 512"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M270.6 73.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L248 141.3 385.4 278.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160zm160 352l-160-160c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L248 333.3 385.4 470.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3z"
                />
              </svg>
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="remove-share"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="text-danger"
                data-test-id="trash-icon"
                fill="currentColor"
                focusable="false"
                height="32"
                role="img"
                style="display: inline-block; vertical-align: middle;"
                viewBox="0 0 512 512"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
